src/cicd/k8s/ticketburst-checkout.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ticketburst-checkout-service
  labels:
    app: ticketburst
    appsvc: ticketburst-checkout
spec:
  type: NodePort
  selector:
    appsvc: ticketburst-checkout
  ports:
  - name: http
    port: 3003
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketburst-checkout-deployment
spec:
  selector:
    matchLabels:
      appsvc: ticketburst-checkout
  replicas: 2
  template:
    metadata:
      labels:
        app: ticketburst
        appsvc: ticketburst-checkout
    spec:
      containers:
      - name: ticketburst-services-checkout
        image: ticketburst-services-checkout:v0
        ports:
        - containerPort: 80
---
