src/cicd/k8s/ticketburst-reservation.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ticketburst-reservation-service
  labels:
    app: ticketburst
    appsvc: ticketburst-reservation
spec:
  type: LoadBalancer
  selector:
    appsvc: ticketburst-reservation
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketburst-reservation-deployment
spec:
  selector:
    matchLabels:
      appsvc: ticketburst-reservation
  replicas: 1
  template:
    metadata:
      labels:
        app: ticketburst
        appsvc: ticketburst-reservation
    spec:
      containers:
      - name: ticketburst-services-reservation
        image: 381777116710.dkr.ecr.eu-south-1.amazonaws.com/ticketburst-reservation:46f0610
        ports:
        - containerPort: 80
---
