src/cicd/k8s/ticketburst-search.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ticketburst-search-service
  labels:
    app: ticketburst
    appsvc: ticketburst-search
spec:
  type: NodePort
  selector:
    appsvc: ticketburst-search
  ports:
  - name: http
    port: 3001
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketburst-search-deployment
spec:
  selector:
    matchLabels:
      appsvc: ticketburst-search
  replicas: 2
  template:
    metadata:
      labels:
        app: ticketburst
        appsvc: ticketburst-search
    spec:
      containers:
      - name: ticketburst-services-search
        image: 381777116710.dkr.ecr.eu-south-1.amazonaws.com/ticketburst-search:v0
        ports:
        - containerPort: 80
---
